# bio-2-info

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: archive.yml  daily.yml  feed.yml  pages.yml
data/digests/: archived_ledger.json  pushed_ledger.json  selected_20260623.json  selected_20260624.json  selected_20260625.json  selected_20260626.json  selected_20260627.json  selected_20260628.json  selected_20260629.json  selected_20260630.json  selected_20260701.json  selected_20260702.json
docs/data/: papers.json
src/bio_2_info/: __init__.py  __main__.py  archive.py  curate.py  feed.py  notify.py
tests/: test_smoke.py
